2009-10-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (FlushChannel): Skip OutputProc for low-level
	0-length writes. When closing pipes which have already been closed
	not skipping leads to spurious SIG_PIPE signals. Reported by
	Mikhail Teterin <mi+thun@aldan.algebra.com>.

2009-10-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclPosixStr.c: [Bug 2882561]: Work around oddity on Haiku OS
	where SIGSEGV and SIGBUS are the same value.

2009-10-19  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIO.c:	Revised ReadChars and FilterInputBytes routines
	to permit reads to continue up to the string limits of Tcl values.
	Before revisions, large read attempts could panic when as little as
	half the limiting value length was reached.  [Patch 2107634]
	Thanks to Sean Morrison and Bob Parker for their roles in the fix.

2009-10-18  Joe Mistachkin  <joe@mistachkin.com>

	* tests/thread.test (thread-4.[345]): [Bug 1565466]: Correct tests to
	save their error state before the final call to threadReap just in case
	it triggers an "invalid thread id" error.  This error can occur if one
	or more of the target threads has exited prior to the attempt to send
	it an asynchronous exit command.

	* doc/memory.n: [Bug 988703]: Add mechanism for discovering what Tcl_Objs
	* generic/tclCkalloc.c (MemoryCmd): are allocated when built for memory
	* generic/tclInt.decls: debugging.  This was previously backported from
	* generic/tclInt.h: Tcl 8.6 with the corrections to fix [Bug 2871908].
	* generic/tclObj.c (ObjData, TclFinalizeThreadObjects): However, there
	were key elements missing.  These changes make things consistent between
	branches.

2009-10-17  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclVar.c (TclDeleteCompiledLocalVars, UnsetVarStruct)
	(TclDeleteNamespaceVars): 
	* generic/tclTrace.c (Tcl_UntraceVar2): [Bug 2629338]: Stop traces
	that are deleted part way through (a feature used by tdom) from
	causing freed memory to be accessed.
